# STM32F429IGT6-Embedfire-Template

./: .gitignore  README.md
mcu/Libraries/CMSIS/: stm32f4xx.h
mcu/Libraries/HAL_Driver/: stm32f4xx_hal_conf.h
mcu/Libraries/lvgl/: lv_conf.h  lvgl.h
mcu/Libraries/lvgl/src/: lvgl.h
mcu/Libraries/lvgl/src/libs/bmp/: lv_bmp.h
mcu/Libraries/lvgl/src/libs/ffmpeg/: lv_ffmpeg.h
mcu/Libraries/lvgl/src/libs/freetype/: lv_freetype.h
mcu/Libraries/lvgl/src/libs/fsdrv/: lv_fsdrv.h
mcu/Libraries/lvgl/src/libs/gif/: lv_gif.h
mcu/Libraries/lvgl/src/libs/libjpeg_turbo/: lv_libjpeg_turbo.h
mcu/Libraries/lvgl/src/libs/libpng/: lv_libpng.h
mcu/Libraries/lvgl/src/libs/lodepng/: lv_lodepng.h
mcu/Libraries/lvgl/src/libs/rle/: lv_rle.h
mcu/Libraries/lvgl/src/libs/tiny_ttf/: lv_tiny_ttf.h
mcu/Libraries/lvgl/src/libs/tjpgd/: lv_tjpgd.h
mcu/Libraries/lvgl/src/others/observer/: lv_observer.h  lv_observer_private.h
mcu/Libraries/lvgl/src/others/sysmon/: lv_sysmon.h  lv_sysmon_private.h
mcu/Libraries/lvgl/src/others/test/: lv_test_private.h
mcu/Libraries/lvgl/src/others/translation/: lv_translation.h
mcu/Libraries/lvgl/src/others/xml/: lv_xml.h
mcu/Libraries/lvgl/src/widgets/span/: lv_span.h
mcu/Libraries/touch/Inc/: bsp_i2c_touch.h  gt9xx.h
mcu/Libraries/touch/Src/: bsp_i2c_touch.c  gt9xx.c
mcu/app/: app_main.c  app_main.h
mcu/board/: boa_hal_msp.c  boa_lcd_backlight.c  boa_lcd_backlight.h  boa_touch.c  boa_touch.h  boa_ultrasonic.c  boa_ultrasonic.h
mcu/core/: main.c  main.h  stm32f4xx_it.c
mcu/devices/: dev_gt9xx.c  dev_gt9xx.h  dev_lcd.c  dev_lcd.h  dev_lcd_panel.h  dev_sdram.c  dev_sdram.h  dev_touch.c  dev_touch.h  dev_ultrasonic.c  dev_ultrasonic.h
mcu/drivers/: dri_hal_msp.c  dri_i2c1.c  dri_i2c1.h  dri_i2c2.c  dri_i2c2.h  dri_lcd_ltdc.c  dri_lcd_ltdc.h  dri_lcd_panel.h  dri_sdram.c  dri_sdram.h  dri_time_us.c  dri_time_us.h  dri_touch_gt9xx.c  dri_touch_gt9xx.h
mcu/services/: ser_err.h  ser_lvgl.c  ser_lvgl.h  ser_ultrasonic.c  ser_ultrasonic.h
project/: CMakeLists.txt  arm-gnu-none-eabi.cmake
